--- a/src/UI/Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/src/UI/Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -25,6 +25,11 @@
                 @Html.TextBoxFor(m => m.UserName)
                 @Html.ValidationMessageFor(m => m.UserName)
             </li>
+            <li>
+                @Html.LabelFor(m => m.EmailAddress)
+                @Html.TextBoxFor(m => m.EmailAddress)
+                @Html.ValidationMessageFor(m => m.EmailAddress)
+            </li>
         </ol>
         @Html.HiddenFor(m => m.ExternalLoginData)
         <input type="submit" value="Register" />
