Volunteer Page and Charity Page added w/clearfields
This is added work from both Nancy and myself.

--- a/src/UI/Web/Views/Shared/_Layout.cshtml
+++ b/src/UI/Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,9 @@
                     <nav>
                         <ul id="menu">
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("How It Works", "HowItWorks", "Home")</li>
+                            <li>@Html.ActionLink("About", "About", "Home")</li>
+                            <li>@Html.ActionLink("Join Charity", "RegisterC", "CharityRegister")</li>
+                            <li>@Html.ActionLink("Join Volunteer", "RegisterVolunteer", "Volunteer")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                         </ul>
                     </nav>
