--- a/src/UI/Web/Views/Volunteer/RegisterVolunteer.cshtml
+++ b/src/UI/Web/Views/Volunteer/RegisterVolunteer.cshtml
@@ -15,14 +15,6 @@
         <legend>Volunteer</legend>
 
         <div class ="editor-label">
-            @Html.LabelFor(model => model.UserName)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.UserName)
-            @Html.ValidationMessageFor(model => model.UserName)
-        </div>
-
-        <div class ="editor-label">
             @Html.LabelFor(model => model.ContactFirstName)
         </div>
         <div class ="editor-field">
@@ -39,18 +31,43 @@
         </div>
 
         <div class ="editor-label">
+            @Html.LabelFor(model => model.UserName)
+        </div>
+         <div class ="editor-field">
+            @Html.EditorFor(model => model.UserName)
+            @Html.ValidationMessageFor(model => model.UserName)
+        </div>
+
+        <div class ="editor-label">
             @Html.LabelFor(model => model.EmailAddress)
         </div>
         <div class ="editor-field">
             @Html.EditorFor(model => model.EmailAddress)
             @Html.ValidationMessageFor(model => model.EmailAddress)
         </div>
+
         <div class ="editor-label">
             @Html.LabelFor(model => model.ConfirmEmailAddress)
         </div>
         <div class ="editor-field">
             @Html.EditorFor(model => model.ConfirmEmailAddress)
             @Html.ValidationMessageFor(model => model.ConfirmEmailAddress)
+        </div>
+
+        <div class ="editor-label">
+            @Html.LabelFor(model => model.Password)
+        </div>
+        <div class ="editor-field">
+            @Html.EditorFor(model => model.Password)
+            @Html.ValidationMessageFor(model => model.Password)
+        </div>
+
+        <div class ="editor-label">
+            @Html.LabelFor(model => model.ConfirmPassword)
+        </div>
+        <div class ="editor-field">
+            @Html.EditorFor(model => model.ConfirmPassword)
+            @Html.ValidationMessageFor(model => model.ConfirmPassword)
         </div>
     
         <div class ="editor-label">
@@ -70,67 +87,19 @@
         </div>
 
         <div class ="editor-label">
-            @Html.LabelFor(model => model.Password)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.Password)
-            @Html.ValidationMessageFor(model => model.Password)
-        </div>
-
-        <div class ="editor-label">
-            @Html.LabelFor(model => model.ConfirmPassword)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.ConfirmPassword)
-            @Html.ValidationMessageFor(model => model.ConfirmPassword)
-        </div>
-
-        <div class ="editor-label">
-            @Html.LabelFor(model => model.StreetAddress)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.StreetAddress)
-            @Html.ValidationMessageFor(model => model.StreetAddress)
-        </div>
-
-        <div class ="editor-label">
-            @Html.LabelFor(model => model.StreetAddress2)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.StreetAddress2)
-            @Html.ValidationMessageFor(model => model.StreetAddress2)
-        </div>
-
-        <div class ="editor-label">
-            @Html.LabelFor(model => model.City)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.City)
-            @Html.ValidationMessageFor(model => model.City)
-        </div>
-
-        <div class ="editor-label">
-            @Html.LabelFor(model => model.State)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.State)
-            @Html.ValidationMessageFor(model => model.State)
-        </div>
-
-        <div class ="editor-label">
-            @Html.LabelFor(model => model.ZipCode)
-        </div>
-        <div class ="editor-field">
-            @Html.EditorFor(model => model.ZipCode)
-            @Html.ValidationMessageFor(model => model.ZipCode)
-        </div>
-
-        <div class ="editor-label">
             @Html.LabelFor(model => model.VolunteerHours)
         </div>
         <div class ="editor-field">
             @Html.EditorFor(model => model.VolunteerHours)
             @Html.ValidationMessageFor(model => model.VolunteerHours)
+        </div>
+
+        <div class ="editor-label">
+            @Html.LabelFor(model => model.SkillSet)
+        </div>
+        <div class ="editor-field">
+            @Html.EditorFor(model => model.SkillSet)
+            @Html.ValidationMessageFor(model => model.SkillSet)
         </div>
 
         <div class ="input-submit">
