--- a/src/UI/Web/Views/Volunteer/RegisterVolunteer.cshtml
+++ b/src/UI/Web/Views/Volunteer/RegisterVolunteer.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Join to Provide Help for Charities!</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("RegisterVolunteer", "Volunteer", FormMethod.Post, new { name = "RegisterVolunteer", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
@@ -102,11 +102,24 @@
             @Html.ValidationMessageFor(model => model.SkillSet)
         </div>
 
+        <form action="" method ="post" enctype="multipart/form-data">
+            <label for="file">Filename:</label>
+            <input type="file" name="file" id="file" />
+        </form>
+
         <div class ="input-submit">
             <input type ="submit" value="Join" />
-            <button onclick="location.href='@Url.Action("RegisterVolunteer", "Volunteer")'">Clear Fields</button>
+            <button onclick="clearFields()">Clear Fields</button>
         </div>
     </fieldset>
+    
+     <script type ="text/javascript">
+
+        function clearFields() {
+            var form = document.forms["RegisterVolunteer"];
+            $(form).find("input[type='text']").attr("value", "");
+        }
+    </script>
 }
 
 @section Scripts {
